plugins {
	id 'org.springframework.boot' version '2.3.0.M4'
	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
	id 'java'
}

group = 'com.github.beliakou'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '14'

repositories {
	mavenLocal()
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation('org.springframework.boot:spring-boot-starter-web')
	implementation('org.springframework.boot:spring-boot-starter-security')
	implementation('org.springframework.data:spring-data-mongodb')
	implementation('org.mongodb:mongodb-driver-sync')
	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}
}

test {
	useJUnitPlatform()
}

tasks.withType(JavaCompile) {
	options.compilerArgs += '--enable-preview'
}
tasks.withType(Test) {
	jvmArgs += "--enable-preview"
}
tasks.withType(JavaExec) {
	jvmArgs += '--enable-preview'
}
